--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1237,6 +1237,7 @@ a:active {
     font-family: "Dosis", sans-serif;
     font-size: 4.5vw;
     font-weight: 900;
+    height: 53px;
   }
   .update-address-btn {
     font-family: "Dosis", sans-serif;
@@ -1595,7 +1596,7 @@ a:active {
     margin: 14.5px 0;
   }
   .navbar-fixed-top .navbar-collapse {
-    max-height: 450px;
+    max-height: 490px;
   }
   #brandicon {
     color: #b61d18;
@@ -3370,7 +3371,7 @@ a:active {
     display: none;
   }
   .products-icon {
-    top: -2px;
+    top: 0.03vw;
     font-size: 2.0vw;
   }
   .nav > li > a {
