added background on edit-review-wrapper

--- a/static/scss/_partials/portrait-ipad/pages/_reviews-page.scss
+++ b/static/scss/_partials/portrait-ipad/pages/_reviews-page.scss
@@ -12,6 +12,7 @@
     padding-bottom: 25vw;
     min-height: 82vh;
     padding-top: 10vw;
+    background-color: $page-bgr-clr;
 }
 
 .reviewcard {
