--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -526,6 +526,7 @@ a:active {
     padding-bottom: 25vw;
     min-height: 82vh;
     padding-top: 10vw;
+    background-color: #003553;
   }
   .reviewcard {
     width: 90vw;
@@ -661,7 +662,7 @@ a:active {
     margin-top: 2vw;
     margin-bottom: 2vw;
     font-family: "Dosis", sans-serif;
-    font-size: 2.0vw;
+    font-size: 7.0vw;
   }
   .delete-confirm-btn {
     background-color: lightcoral;
@@ -1352,6 +1353,7 @@ a:active {
     padding-bottom: 25vw;
     min-height: 82vh;
     padding-top: 10vw;
+    background-color: #003553;
   }
   .reviewcard {
     width: 90vw;
@@ -1487,7 +1489,7 @@ a:active {
     margin-top: 2vw;
     margin-bottom: 2vw;
     font-family: "Dosis", sans-serif;
-    font-size: 2.0vw;
+    font-size: 5.0vw;
   }
   .delete-confirm-btn {
     background-color: lightcoral;
@@ -2174,6 +2176,7 @@ a:active {
     padding-bottom: 25vw;
     min-height: 82vh;
     padding-top: 10vw;
+    background-color: #003553;
   }
   .reviewcard {
     width: 70vw;
@@ -3159,7 +3162,7 @@ a:active {
     border-radius: 5px;
     border: 1px solid grey;
     width: 24vw;
-    height: 15vh;
+    height: 25vh;
     position: fixed;
     opacity: 0.0;
     z-index: -1;
@@ -3182,7 +3185,7 @@ a:active {
     background-color: lightcoral;
     color: #414141;
     margin-right: 2px;
-    width: 6vw;
+    width: 10vw;
     -webkit-transition: color .3s ease-in-out;
     transition: color .3s ease-in-out;
     text-decoration: none;
@@ -3192,7 +3195,7 @@ a:active {
     color: whitesmoke;
   }
   .delete-cancel-btn {
-    width: 6vw;
+    width: 10vw;
     background-color: lightslategray;
     margin-left: 2px;
     font-family: "Dosis", sans-serif;
