--- a/static/scss/_partials/portrait-mobile/pages/_reviews-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_reviews-page.scss
@@ -12,6 +12,7 @@
     padding-bottom: 25vw;
     min-height: 82vh;
     padding-top: 10vw;
+    background-color: $page-bgr-clr;
 }
 
 .reviewcard {
@@ -161,7 +162,7 @@
 
     font: {
         family: $dosisFont;
-        size: 2.0vw;
+        size: 7.0vw;
     }
 }
 
