--- a/static/scss/_partials/portrait-desktop/pages/_cart-page.scss
+++ b/static/scss/_partials/portrait-desktop/pages/_cart-page.scss
@@ -28,6 +28,11 @@
     width: 60%;
 }
 
+.free-shipping-message {
+    font-size: 5.5vw;
+    color: white;
+}
+
 .empty-cart-wrapper {
     display: flex;
     flex-wrap: wrap;
