--- a/static/scss/_partials/portrait-mobile/pages/_cart-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_cart-page.scss
@@ -10,7 +10,7 @@
 }
 
 .addcard-icon {
-    font-size: 3vw;
+    font-size: 4vw;
 }
 
 .cart-summary-wrapper {
@@ -26,6 +26,11 @@
     flex-wrap: wrap;
     justify-content: center;
     width: 60%;
+}
+
+.free-shipping-message {
+    font-size: 5.5vw;
+    color: white;
 }
 
 .empty-cart-wrapper {
