--- a/static/scss/_partials/landscape-ipad/_landscape-ipad.scss
+++ b/static/scss/_partials/landscape-ipad/_landscape-ipad.scss
@@ -1,5 +1,6 @@
-@media screen and (width: 1024px) and (height: 768px) and (orientation: landscape),
-screen and (width: 1366px) and (height: 1024px) and (orientation: landscape) {
+@media screen and (min-width: 1023px) and (max-width: 1024px) and (min-height: 767px) and (max-height: 768px) and (orientation: landscape),
+screen and (width: 1112px) and (min-height: 833px) and (max-height: 834px) and (orientation: landscape),
+screen and (min-width: 1365px) and (max-width: 1366px) and (min-height: 1023px) and (max-height: 1024px) and (orientation: landscape) {
 
     @import "pages/_cart-page.scss";
     @import "pages/_checkout-page.scss";
