simplified media rule ipad portrait and implemented popup to reflect  card errors on checkout

--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -112,4 +112,9 @@
     </div>
 </div>
 
+<div id="card-error-popup" class="vh">
+    <div id="card-error-popup-message" class="ha"></div>
+    <div class="btn card-error-popup-btn ha" onclick="closeCardErrorPopup()">Got it!</div>
+</div>
+
 {% endblock %}
