--- a/static/scss/_partials/portrait-desktop/pages/_checkout-page.scss
+++ b/static/scss/_partials/portrait-desktop/pages/_checkout-page.scss
@@ -56,3 +56,45 @@ caption p {
 #submit_payment_btn:hover {
     color: darkred;
 }
+
+#card-error-popup {
+    background-color: beige;
+    border-radius: 5px;
+    border: 1px solid grey;
+    width: 35vw;
+    height: 25vh;
+    position: fixed;
+    opacity: 0.0;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    transform: translateZ(-10px);
+    transition: opacity .3s ease-in-out;
+}
+
+#card-error-popup-message {
+    width: 90%;
+
+    font: {
+        family: $dosisFont;
+        size: 2.0vw;
+    }
+}
+
+.card-error-popup-btn {
+    background-color: lightslategray;
+    color: rgb(65, 65, 65);
+    margin-right: 2px;
+    width: 10vw;
+    transition: color .3s ease-in-out;
+    text-decoration: none;
+    font-size: 2.0vw;
+}
+
+
+.card-error-popup-btn:hover {
+    color: whitesmoke;
+}
