--- a/reviews/templates/reviews.html
+++ b/reviews/templates/reviews.html
@@ -6,44 +6,46 @@
 {% block content %}
 <div class="reviews-wrapper vac ha">
 
-        <div class="page-headline ha">Reviews by users</div>
-        <div class="search-field-wrapper ha">
-            <div class="display">
-                <form action="{% url 'review_search' %}" method="GET">
-                    <input type="text" name="q">
-                    <button type="submit">Search</button>
-                </form>
+    <div class="page-headline ha">Reviews by users</div>
+    <div class="search-field-wrapper ha">
+        <div class="display">
+            <form action="{% url 'review_search' %}" method="GET">
+                <input type="text" name="q">
+                <button type="submit">Search</button>
+            </form>
+        </div>
+    </div>
+    {% if reviews %}
+    {% for review in reviews %}
+    <div class="reviewcard display panel panel-default">
+        <div class="panel-body">
+            {% if review.image %}
+            <img class="product-image" src="{{ MEDIA_URL }}{{review.image}}"
+                alt="image of {{review.product.name}} review">
+            {% endif %}
+            <div class="review-headline"><b><a href="{% url 'review_detail' review.id %}">{{ review.title }}</a></b>
+            </div>
+            <a class="product-headline"
+                href="{% url 'product_detail' review.product.id %}"><b>{{review.product.name}}</b></a>
+            <p class="product-description">{{ review.comment|truncatewords:10 }}</p>
+            <div class="review-stats">
+                <div class="stats-key">Author:</div>
+                <div class="stats-value">{{ review.author }}</div>
+                <div class="stats-key">Date:</div>
+                <div class="stats-value">{{ review.created_date }}</div>
+                <div class="stats-key"><i class="fa fa-eye"></i></div>
+                <div class="stats-value">{{ review.view_count }}</div>
+                <div class="stats-key">Rating:</div>
+                <div class="stats-value">{{review.rating }}</div>
+            </div>
+            <div class="review-btn-bar ha">
+                <a class="btn review-details-btn ha" href="{% url 'review_detail' review.id %}">Review Details</a>
             </div>
         </div>
-        {% if reviews %}
-        {% for review in reviews %}
-        <div class="reviewcard display panel panel-default">
-            <div class="panel-body">
-                {% if review.image %}
-                <img class="product-image" src="{{ MEDIA_URL }}{{review.image}}"
-                    alt="image of {{review.product.name}} review">
-                {% endif %}
-                <div class="review-headline"><b><a href="{% url 'review_detail' review.id %}">{{ review.title }}</a></b></div>
-                <a class="product-headline" href="{% url 'product_detail' review.product.id %}"><b>{{review.product.name}}</b></a>
-                <p class="product-description">{{ review.comment|truncatewords:10 }}</p>
-                <div class="review-stats">
-                    <div class="stats-key">Author:</div>
-                    <div class="stats-value">{{ review.author }}</div>
-                    <div class="stats-key">Date:</div>
-                    <div class="stats-value">{{ review.created_date }}</div>
-                    <div class="stats-key"><i class="fa fa-eye"></i></div>
-                    <div class="stats-value">{{ review.view_count }}</div>
-                    <div class="stats-key">Rating:</div>
-                    <div class="stats-value">{{review.rating }}</div>
-                </div>
-                <div class="review-btn-bar ha">
-                    <a class="btn review-details-btn ha" href="{% url 'review_detail' review.id %}">Review Details</a>
-                </div>
-            </div>
-        </div>
-        {% endfor %}
-        {% else %}
-        <p class="no-results-message vh">No reviews have been found.</p>
-        {% endif %}
+    </div>
+    {% endfor %}
+    {% else %}
+    <p class="no-results-message vh">No reviews have been found.</p>
+    {% endif %}
 </div>
 {% endblock %}
