--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -17,7 +17,7 @@
             <label id="password-reset-label" for="id_email" class="control-label required-field">E-mail address:</label>
             <div class="passwordresetform ha">
                 {{ form.email }}
-                <input class="btn pw-reset-btn" type="" value="Reset password" />
+                <input class="btn pw-reset-btn" value="Reset password" />
             </div>
         </div>
     </form>
