--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -8,7 +8,7 @@
     <div class="page-headline ha">Registration</div>
     <div id="registration-message">If you have already an account, you can sign in <a href="{% url 'login' %}">here</a>
     </div>
-    <form id="registrationform" method="POST" action="">
+    <form id="registrationform" method="POST">
         {% csrf_token %}
         {{ registration_form | as_bootstrap }}
         <p id="submit-registration-btn-wrapper" class="ha">
