--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -3,13 +3,13 @@
 {% load bootstrap_tags %}
 
 {% block head_js %}
-<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
-<script type="text/javascript">
+<script src="https://js.stripe.com/v2/"></script>
+<script>
     //<![CDATA[
     Stripe.publishableKey = '{{ publishable }}';
     //]]>
 </script>
-<script type="text/javascript" src="{% static 'js/stripe.js' %}"></script>
+<script src="{% static 'js/stripe.js' %}"></script>
 {% endblock %}
 
 {% block content %}
@@ -57,10 +57,11 @@
             <form class="form-inline cart-form" method="post" action="{% url 'adjust_cart' item.id %}">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label for="exampleInputAmount" class="sr-only">New Qty</label>
+                    <label for="new-qty-product{{item.product.id}}" class="sr-only">New Qty</label>
                     <div class="input-group">
                         <div class="input-group-addon">Qty</div>
-                        <input name="quantity" type="number" min="0" max="999" class="form-control">
+                        <input id="new-qty-product{{item.product.id}}" name="quantity" type="number" min="0" max="999"
+                            class="form-control">
                         <div class="input-group-addon">{{item.quantity}}</div>
                     </div>
                 </div>
@@ -84,8 +85,8 @@
             {% endif %}
         </div>
 
-        <form role="form" method="post" id="payment-form" action="{% url 'checkout' %}">
-            <legend>Payment Details</legend>
+        <form method="post" id="payment-form" action="{% url 'checkout' %}">
+            <p class="page-headline ha">Payment Details</p>
 
             <div id="credit-card-errors" style="display: none;">
                 <div class="alert-message block-message error" id="stripe-error-message"></div>
