--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/" title="Index The Apple Shop"><span id="brandicon" class="glyphicon glyphicon-apple"></span> The
+                <a class="navbar-brand" href="/" title="Index The Apple Shop"><span id="brandicon"
+                        class="glyphicon glyphicon-apple"></span> The
                     Apple Shop</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
@@ -44,9 +45,11 @@
                     </li>
                     <li class="desktop-navbar-icons">
                         {% if "products" in app_path %}
-                        <a href="{% url 'products' %}" title="Products"><span class="glyphicon products-icon glyphicon-apple active-app"></span></a>
+                        <a href="{% url 'products' %}" title="Products"><span
+                                class="glyphicon products-icon glyphicon-apple active-app"></span></a>
                         {% else %}
-                        <a href="{% url 'products' %}" title="Products"><span class="glyphicon products-icon glyphicon-apple"></span></a>
+                        <a href="{% url 'products' %}" title="Products"><span
+                                class="glyphicon products-icon glyphicon-apple"></span></a>
                         {% endif %}
                     </li>
                     <li class="desktop-navbar-icons">
@@ -58,25 +61,24 @@
                     </li>
                     <li class="desktop-navbar-icons">
                         {% if "wishlist" in app_path %}
-                        <a href="{% url 'view_wishlist' %}" title="Wishlist"><i class="fa fa-star active-app"></i>
-                            {% else %}
-                            <a href="{% url 'view_wishlist' %}" title="Wishlist"><i class="fa fa-star"></i>
-                                {% endif %}
-                                {%if wishlist_count > 0 %}
-                                <label class="badge badge-wishlist badge-warning"><b>{{ wishlist_count }}</b></label>
-                                {% endif %}
-                            </a>
+                        <a href="{% url 'view_wishlist' %}" title="Wishlist"><i class="fa fa-star active-app"></i></a>
+                        {% else %}
+                        <a href="{% url 'view_wishlist' %}" title="Wishlist"><i class="fa fa-star"></i></a>
+                        {% endif %}
+                        {%if wishlist_count > 0 %}
+                        <label class="badge badge-wishlist badge-warning"><b>{{ wishlist_count }}</b></label>
+                        {% endif %}
                     </li>
                     <li class="desktop-navbar-icons">
                         {% if "cart" in app_path %}
-                        <a href="{% url 'view_cart' %}" title="Shopping Cart"><i class="fa fa-shopping-cart active-app"></i>
-                            {% else %}
-                            <a href="{% url 'view_cart' %}" title="Shopping Cart"><i class="fa fa-shopping-cart"></i>
-                                {% endif %}
-                                {%if product_count > 0 %}
-                                <label class="badge badge-cart badge-warning"><b>{{ product_count }}</b></label>
-                                {% endif %}
-                            </a>
+                        <a href="{% url 'view_cart' %}" title="Shopping Cart"><i
+                                class="fa fa-shopping-cart active-app"></i></a>
+                        {% else %}
+                        <a href="{% url 'view_cart' %}" title="Shopping Cart"><i class="fa fa-shopping-cart"></i></a>
+                        {% endif %}
+                        {%if product_count > 0 %}
+                        <label class="badge badge-cart badge-warning"><b>{{ product_count }}</b></label>
+                        {% endif %}
                     </li>
                     {% if user.is_authenticated %}
                     <li class="desktop-navbar-icons">
@@ -86,7 +88,8 @@
                         <a href="{% url 'profile' %}" title="Profile"><i class="fa fa-user"></i></a>
                         {% endif %}
                     </li>
-                    <li class="desktop-navbar-icons"><a href="{% url 'logout' %}" title="Logout"><i class="fa fa-sign-out"></i></a></li>
+                    <li class="desktop-navbar-icons"><a href="{% url 'logout' %}" title="Logout"><i
+                                class="fa fa-sign-out"></i></a></li>
                     {%  else %}
                     <li class="desktop-navbar-icons">
                         {% if "login" in app_path %}
@@ -97,7 +100,8 @@
                     </li>
                     <li class="desktop-navbar-icons">
                         {% if "register" in app_path %}
-                        <a href="{% url 'registration' %}" title="Registration"><i class="fa fa-user-plus active-app"></i></a>
+                        <a href="{% url 'registration' %}" title="Registration"><i
+                                class="fa fa-user-plus active-app"></i></a>
                         {%  else %}
                         <a href="{% url 'registration' %}" title="Registration"><i class="fa fa-user-plus"></i></a>
                         {% endif %}
@@ -107,47 +111,52 @@
                 <ul class="nav navbar-nav navbar-right mobile-navbar">
                     <li class="mobile-list-items">
                         {% if app_path == "/" %}
-                        <a href="{% url 'index' %}" title="Our Bestsellers"><i class="fa fa-home active-app"></i> Topsellers</a>
+                        <a href="{% url 'index' %}" title="Our Bestsellers"><i class="fa fa-home active-app"></i>
+                            Topsellers</a>
                         {% else %}
                         <a href="{% url 'index' %}" title="Our Bestsellers"><i class="fa fa-home"></i> Topsellers</a>
                         {% endif %}
                     </li>
                     <li class="mobile-list-items">
                         {% if "products" in app_path %}
-                        <a href="{% url 'products' %}" title="Products"><span class="glyphicon glyphicon-apple active-app"></span>
+                        <a href="{% url 'products' %}" title="Products"><span
+                                class="glyphicon glyphicon-apple active-app"></span>
                             Products</a>
                         {% else %}
-                        <a href="{% url 'products' %}" title="Products"><span class="glyphicon glyphicon-apple"></span> Products</a>
+                        <a href="{% url 'products' %}" title="Products"><span class="glyphicon glyphicon-apple"></span>
+                            Products</a>
                         {% endif %}
                     </li>
                     <li class="mobile-list-items">
                         {% if "reviews" in app_path %}
-                        <a href="{% url 'get_reviews' %}" title="Reviews"><i class="fa fa-comment active-app"></i> Reviews</a>
+                        <a href="{% url 'get_reviews' %}" title="Reviews"><i class="fa fa-comment active-app"></i>
+                            Reviews</a>
                         {% else %}
                         <a href="{% url 'get_reviews' %}" title="Reviews"><i class="fa fa-comment"></i> Reviews</a>
                         {% endif %}
                     </li>
                     <li class="mobile-list-items">
                         {% if "wishlist" in app_path %}
-                        <a href="{% url 'view_wishlist' %}" title="Wishlist"><i class="fa fa-star active-app"></i> Wishlist
-                            {% else %}
-                            <a href="{% url 'view_wishlist' %}" title="Wishlist"><i class="fa fa-star"></i> Wishlist
-                                {% endif %}
-                                {%if wishlist_count > 0 %}
-                                <label class="badge badge-wishlist badge-warning"><b>{{ wishlist_count }}</b></label>
-                                {% endif %}
-                            </a>
+                        <a href="{% url 'view_wishlist' %}" title="Wishlist"><i class="fa fa-star active-app"></i>
+                            Wishlist</a>
+                        {% else %}
+                        <a href="{% url 'view_wishlist' %}" title="Wishlist"><i class="fa fa-star"></i> Wishlist</a>
+                        {% endif %}
+                        {%if wishlist_count > 0 %}
+                        <label class="badge badge-wishlist badge-warning"><b>{{ wishlist_count }}</b></label>
+                        {% endif %}
                     </li>
                     <li class="mobile-list-items">
                         {% if "cart" in app_path %}
-                        <a href="{% url 'view_cart' %}" title="Shopping Cart"><i class="fa fa-shopping-cart active-app"></i> Cart
-                            {% else %}
-                            <a href="{% url 'view_cart' %}" title="Shopping Cart"><i class="fa fa-shopping-cart"></i> Cart
-                                {% endif %}
-                                {%if product_count > 0 %}
-                                <label class="badge badge-cart badge-warning"><b>{{ product_count }}</b></label>
-                                {% endif %}
-                            </a>
+                        <a href="{% url 'view_cart' %}" title="Shopping Cart"><i
+                                class="fa fa-shopping-cart active-app"></i> Cart</a>
+                        {% else %}
+                        <a href="{% url 'view_cart' %}" title="Shopping Cart"><i class="fa fa-shopping-cart"></i>
+                            Cart</a>
+                        {% endif %}
+                        {%if product_count > 0 %}
+                        <label class="badge badge-cart badge-warning"><b>{{ product_count }}</b></label>
+                        {% endif %}
                     </li>
                     {% if user.is_authenticated %}
                     <li class="mobile-list-items">
@@ -169,9 +178,11 @@
                     </li>
                     <li class="mobile-list-items">
                         {% if "register" in app_path %}
-                        <a href="{% url 'registration' %}" title="Registration"><i class="fa fa-user-plus active-app"></i> Register</a>
+                        <a href="{% url 'registration' %}" title="Registration"><i
+                                class="fa fa-user-plus active-app"></i> Register</a>
                         {%  else %}
-                        <a href="{% url 'registration' %}" title="Registration"><i class="fa fa-user-plus"></i> Register</a>
+                        <a href="{% url 'registration' %}" title="Registration"><i class="fa fa-user-plus"></i>
+                            Register</a>
                         {% endif %}
                     </li>
                     {% endif %}
@@ -189,6 +200,8 @@
         </div>
     </div>
     {% endif %}
+
+
     <div class="container">
 
         {% block content %}{% endblock %}
@@ -207,32 +220,33 @@
                     <li class="quicklinks">
                         {% if "products" in app_path %}
                         <a href="{% url 'products' %}" title="Products"><span
-                                class="glyphicon glyphicon-apple products-icon active-app"></a>
+                                class="glyphicon glyphicon-apple products-icon active-app"></span></a>
                         {% else %}
-                        <a href="{% url 'products' %}" title="Products"><span class="glyphicon glyphicon-apple products-icon"></a>
+                        <a href="{% url 'products' %}" title="Products"><span
+                                class="glyphicon glyphicon-apple products-icon"></span></a>
                         {% endif %}
                     </li>
                     <li class="quicklinks">
                         {% if "wishlist" in app_path %}
-                        <a href="{% url 'view_wishlist' %}" title="Wishlist"><i class="fa fa-star active-app"></i>
-                            {% else %}
-                            <a href="{% url 'view_wishlist' %}" title="Wishlist"><i class="fa fa-star"></i>
-                                {% endif %}
-                                {%if wishlist_count > 0 %}
-                                <label id="wishlist-badge-bottom" class="badge badge-wishlist badge-warning">{{ wishlist_count }}</label>
-                                {% endif %}
-                            </a>
+                        <a href="{% url 'view_wishlist' %}" title="Wishlist"><i class="fa fa-star active-app"></i></a>
+                        {% else %}
+                        <a href="{% url 'view_wishlist' %}" title="Wishlist"><i class="fa fa-star"></i></a>
+                        {% endif %}
+                        {%if wishlist_count > 0 %}
+                        <label id="wishlist-badge-bottom"
+                            class="badge badge-wishlist badge-warning">{{ wishlist_count }}</label>
+                        {% endif %}
                     </li>
                     <li class="quicklinks">
                         {% if "cart" in app_path %}
-                        <a href="{% url 'view_cart' %}" title="Shopping Cart"><i class="fa fa-shopping-cart active-app"></i>
-                            {% else %}
-                            <a href="{% url 'view_cart' %}" title="Shopping Cart"><i class="fa fa-shopping-cart"></i>
-                                {% endif %}
-                                {%if product_count > 0 %}
-                                <label id="cart-badge-bottom" class="badge badge-cart badge-warning">{{ product_count }}</label>
-                                {% endif %}
-                            </a>
+                        <a href="{% url 'view_cart' %}" title="Shopping Cart"><i
+                                class="fa fa-shopping-cart active-app"></i></a>
+                        {% else %}
+                        <a href="{% url 'view_cart' %}" title="Shopping Cart"><i class="fa fa-shopping-cart"></i></a>
+                        {% endif %}
+                        {%if product_count > 0 %}
+                        <label id="cart-badge-bottom" class="badge badge-cart badge-warning">{{ product_count }}</label>
+                        {% endif %}
                     </li>
 
                     <li class="quicklinks">
@@ -260,9 +274,10 @@
                     <li class="quicklinks">
                         {% if "products" in app_path %}
                         <a href="{% url 'products' %}" title="Products"><span
-                                class="glyphicon glyphicon-apple products-icon active-app"></a>
+                                class="glyphicon glyphicon-apple products-icon active-app"></span></a>
                         {% else %}
-                        <a href="{% url 'products' %}" title="Products"><span class="glyphicon glyphicon-apple products-icon"></a>
+                        <a href="{% url 'products' %}" title="Products"><span
+                                class="glyphicon glyphicon-apple products-icon"></span></a>
                         {% endif %}
                     </li>
 
@@ -276,26 +291,27 @@
 
                     <li class="quicklinks">
                         {% if "wishlist" in app_path %}
-                        <a href="{% url 'view_wishlist' %}" title="Wishlist"><i class="fa fa-star active-app"></i>
-                            {% else %}
-                            <a href="{% url 'view_wishlist' %}" title="Wishlist"><i class="fa fa-star"></i>
-                                {% endif %}
-                                {%if wishlist_count > 0 %}
-                                <label id="wishlist-badge-bottom-ipad" class="badge badge-wishlist badge-warning">{{ wishlist_count }}</label>
-                                {% endif %}
-                            </a>
+                        <a href="{% url 'view_wishlist' %}" title="Wishlist"><i class="fa fa-star active-app"></i></a>
+                        {% else %}
+                        <a href="{% url 'view_wishlist' %}" title="Wishlist"><i class="fa fa-star"></i></a>
+                        {% endif %}
+                        {%if wishlist_count > 0 %}
+                        <label id="wishlist-badge-bottom-ipad"
+                            class="badge badge-wishlist badge-warning">{{ wishlist_count }}</label>
+                        {% endif %}
                     </li>
 
                     <li class="quicklinks">
                         {% if "cart" in app_path %}
-                        <a href="{% url 'view_cart' %}" title="Shopping Cart"><i class="fa fa-shopping-cart active-app"></i>
-                            {% else %}
-                            <a href="{% url 'view_cart' %}" title="Shopping Cart"><i class="fa fa-shopping-cart"></i>
-                                {% endif %}
-                                {%if product_count > 0 %}
-                                <label id="cart-badge-bottom-ipad" class="badge badge-cart badge-warning">{{ product_count }}</label>
-                                {% endif %}
-                            </a>
+                        <a href="{% url 'view_cart' %}" title="Shopping Cart"><i
+                                class="fa fa-shopping-cart active-app"></i></a>
+                        {% else %}
+                        <a href="{% url 'view_cart' %}" title="Shopping Cart"><i class="fa fa-shopping-cart"></i></a>
+                        {% endif %}
+                        {%if product_count > 0 %}
+                        <label id="cart-badge-bottom-ipad"
+                            class="badge badge-cart badge-warning">{{ product_count }}</label>
+                        {% endif %}
                     </li>
                     {% if user.is_authenticated %}
                     <li class="quicklinks">
@@ -317,7 +333,8 @@
                     </li>
                     <li class="quicklinks">
                         {% if "register" in app_path %}
-                        <a href="{% url 'registration' %}" title="Registration"><i class="fa fa-user-plus active-app"></i></a>
+                        <a href="{% url 'registration' %}" title="Registration"><i
+                                class="fa fa-user-plus active-app"></i></a>
                         {%  else %}
                         <a href="{% url 'registration' %}" title="Registration"><i class="fa fa-user-plus"></i></a>
                         {% endif %}
